---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2022-01-03
  Features:
    - Setting "Use Angel's material colors for intermediates" now includes support for player armor
    - Added setting "Use Vanilla-style chemical plants", (default off) to use vanilla chemical plant sprites and animations when Angel's setting "Disable Bob's chemical plants" is enabled
    - Additions of EmmyLua-style documentation is ongoing
    - Improved support for Angel's Special Vanilla recipes
  Changes:
    - Reskinning of the standard Factorio pipe has been moved into Artisanal Reskins: Library to support adjustments to pipe sprites and shadows in the entire suite
    - Internal restructuring to make entity reskinning through functions globally available under `reskins.lib.apply_skin` is ongoing
    - Iron rod recipes now use the base Factorio iron rod sprites
  Bugfixes:
    - Fixed that the iron plate to iron rod recipe referred to a deprecated `angels-rod-iron` icon instead of the current `iron-stick` icon
    - Fixed that Angel's Industry component mode was not properly detected and recipe icons were broken in some instances
    - Fixed that the iron rod was not properly reverted to the base Factorio sprite
    - Fixed that when playing Angel's Special Vanilla mode, technology icons for powder metallurgy would be inconsistent with base Angel's
    - Fixed that several calls to the `angelsmods` global function were not properly validated
  Locale:
    - Updated German, Russian localizations
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2021-12-12
  Changes: